# vmRent

./: .gitignore  LICENSE  README.md
src/: CMakeLists.txt  main.cpp
src/include/vmRent/model/: Address.hpp  Client.hpp  ClientBuilder.hpp  ClientBuilderDirector.hpp
src/include/vmRent/model/clientBuilders/: NormalClientBuilder.hpp  TestClientBuilder.hpp
src/libs/: Dummy.cpp
src/source/model/: Address.cpp  Client.cpp  ClientBuilder.cpp  ClientBuilderDirector.cpp  ClientType.cpp  ClientType.hpp
src/source/model/clientBuilders/: NormalClientBuilder.cpp  TestClientBuilder.cpp
src/tests/: master.cpp
